versions/24.10.0/docs/JobDetailUpdate.md
# JobDetailUpdate


## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**variable_definitions** | **[{str: (str, none_type)}]** |  | 
**name** | **str** |  | 
**schedules** | [**[ScheduleReference]**](ScheduleReference.md) |  | [optional] 
**subtasks** | [**[SubtaskReference]**](SubtaskReference.md) |  | [optional] 
**allow_users** | [**[ElementsUserReference]**](ElementsUserReference.md) |  | [optional] 
**allow_groups** | [**[ElementsGroupReference]**](ElementsGroupReference.md) |  | [optional] 
**media_roots** | **[int]** |  | [optional] 
**workflow** | **int, none_type** |  | [optional] 
**special_type** | **int, none_type** |  | [optional] 
**description** | **str, none_type** |  | [optional] 
**enabled** | **bool** |  | [optional] 
**allow_others_to_start** | **bool** |  | [optional] 
**allow_client_to_start** | **bool** |  | [optional] 
**show_as_button** | **bool** |  | [optional] 
**input_type** | **str, none_type** |  | [optional] 
**add_to_new_media_roots** | **bool** |  | [optional] 
**hook** | **str, none_type** |  | [optional] 
**webhook_secret** | **str, none_type** |  | [optional] 
**elements_release** | **str** |  | [optional] 
**security_context** | **int, none_type** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


